@@ -8,3 +8,4 @@
 # XXX Get this to work with non-/ ROOTs
 #pw -V ${ROOT}/etc groupadd -g "${groupid}" "${NEWGROUP}"
 pw groupadd "${NEWGROUP}" -g "${groupid}"
+# vim: ts=4 :
