@@ -7,3 +7,4 @@
 
 # Expects a valid groupid to have already been determined
 pw groupmod -g "${groupid}" "${NEWGROUP}"
+# vim: ts=4 :
