@@ -6,3 +6,4 @@
 # $Id$
 
 groupdel "${DEADGROUP}"
+# vim: ts=4 :
