@@ -6,3 +6,4 @@
 # $Id$
 
 userdel "${DEADUSER}"
+# vim: ts=4 :
