@@ -42,3 +42,4 @@ diefunc() {
 }
 
 ## END code from paludis
+# vim: ts=4 :
