@@ -47,3 +47,4 @@ if [[ "${1}" == "--test" ]] ; then
 fi
 
 main $@
+# vim: ts=4 :
