@@ -50,3 +50,4 @@ if [[ "${1}" == "--test" ]] ; then
 fi
 
 main $@
+# vim: ts=4 :
